metacatui/src/main/webapp/css/metacatui-common.css
/* ... */
.has-error input,
input.has-error{
  border-color: #a94442;
  -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
  box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
}
.has-error input:focus,
input.has-error:focus{
  border-color: #843534;
  -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 6px #ce8483;
  box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 6px #ce8483;
}
.has-error label,
.has-error > div.text-left{ /* div.text-left is for Metacat-specific (2.4.X and before) login markup */
	color: #a94442;
	font-weight: bold;
}
.has-warning label{
	color: #8a6d3b;
	font-weight: bold;
}
.has-warning .help-block{
	color: #8a6d3b;
}
.has-warning .form-control {
  border-color: #8a6d3b;
  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
          box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
}
.has-warning .form-control:focus {
  border-color: #66512c;
  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075), 0 0 6px #c0a16b;
          box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075), 0 0 6px #c0a16b;
}
.has-warning .input-group-addon {
  color: #8a6d3b;
  background-color: #fcf8e3;
  border-color: #8a6d3b;
}
.has-warning .form-control-feedback {
  color: #8a6d3b;
}
form .text-left > .icon {
  margin-left: 10px;
  font-size: 1.1em;
}
.input-append .tooltip-inner {
  white-space: normal;
}
.input-append .alert{
	font-size: 14px;
	margin-top: 10px;
}
.form-group input.control-group{
	line-height: 30px;
}
.form-group input ~ .help-text,
.form-group input ~ .help-text ~ .form-feedback {
    display: block;
    margin-left: 24%;
}
.inline-input-group.controls-well{
	margin-bottom: 20px;
	padding: 10px 20px;
	clear: both;
}
.inline-input-group label.inline{
	line-height: 2em;
}
.inline-input-group > .input-append{
	position: relative;
}
.input-append > .notification {
    position: absolute;
    right: 0;
    top: -25px;
    background-color: #FFF;
}
label.inline{
	display: inline;
	margin-right: 10px;
	vertical-align: middle;
}
input.subtle{
	width: 50px;
	font-size: .9em;
	-o-transition: width .2s ease-out;
	-moz-transition: width .2s ease-out;
	-webkit-transition: width .2s ease-out;
	-ms-transition: width .2s ease-out;
	-kthtml-transition: width .2s ease-out;
	transition: width .2s ease-out;
}
.input-append input.subtle{
    font-size: 13px;
}
input.subtle:focus,
.nav .input > form > input[type="text"]:focus
{
	width: 200px;
}
.input-submit{
	margin-left: 10px;
    height: 1em;
    line-height: 1em;
    border-color: #666;
    color: #666;
}
#funding-group .ui-helper-hidden-accessible{
	display: none;
}
#funding-group .ui-autocomplete{
	width: 500px;
	position: absolute;
	top: 10px;
	left: 10px;
}
#funding-group .ui-autocomplete .ui-menu-item{
	width: 500px;
	line-height: 1.4em;
}
.input-help-msg{
	padding: .5em 0;
}
.cell-icon{
	width: 1em;	
}
.progress{
	margin-top: 2em;
}
.ui-autocomplete-container.collapse.in{
	overflow: visible;
}
#collapseParties .popover{
	z-index: 0;	
}
#RegistryGuide > div{
	font-size: 1.8em;
}
.text-container input {
    width: 100%;
}
/*******************************************
Editor View
******************************************/
#editor-header {
    border-bottom: 1px solid #DDDDDD;
}

#editor-header .citation{
	padding: 1em;
    margin-bottom: 0px;
    font-size: 1.1em;
    line-height: 1.6em;
}
.side-nav-item a {
    width: 100%;
    display: block;
    height: 3em;
    font-size: 1.3em;
    line-height: 3em;
    padding-left: 20px;
    box-sizing: border-box;
}
ul.side-nav-items {
    margin-left: 0px;
}
.side-nav-item {
    list-style: none;
    display: block;
}
.side-nav {
    position: fixed;
    background-color: #EEE;
    height: 100%;
    width: 140px;
    margin-left: 0px;
    border-right: 1px solid #DDD;
}
.side-nav + .metadata-container{
	margin-left: 14.893617021276595%;
	padding-left: 20px;
}
.Editor #Footer {
    position: relative;
    margin-left: 14.9%;
    width: 85.1%;
}
.Editor.rendering #Footer{
	margin-left: 0%;
	width: 100%;
}
#editor-footer{
	background-color: #333;
    position: fixed;
    width: 100%;
    box-sizing: border-box;
    bottom: 0px;
    padding: 20px;
    z-index:3;
}

/* Editor package table container */
#data-package-container {
    overflow: auto;   
    position: relative;
}

/* Editor package table */
#data-package-table {
	margin-bottom: 0px;
	width: calc(100% - 2px);
}

/* Editor package table row */
.data-package-item td {
    vertical-align: middle;
    white-space: nowrap;
}

/* Editor package table column 1 */
.data-package-item td:first-of-type {
	padding-left: 20px;
    width: 100px;
}

/* Editor package table column 2 */
.data-package-item td:nth-of-type(2) {
    white-space: normal;
}

/* Editor package table column 3 */
.data-package-item td:nth-of-type(3) {
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
    width: 100px;
}

/* Editor package table column 4 */
.data-package-item td:nth-of-type(4) {
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
    width: 100px;
}

/* Editor package table column 5 */
.data-package-item td:last-of-type {
    text-align: right;
    padding-right: 20px;
    padding-left: 0px;
    width: 100px;
}


/* Editor package table last column buttons */
.data-package-item td button {
    text-align: center;
    vertical-align: middle;
    width: 9em;
    padding-top: .5em;
}

/* Give icons breathing */
.data-package-item button i {
    margin-left: .3em;
    margin-right: .3em;
}

.data-package-item.remove-highlight td{
	border-color: #FF0000;
	border-style: dashed;
	border-width: 2px 0px 2px 0px;
}
.data-package-item.remove-highlight td:first-of-type{
	border-left-width: 1px;
}
.data-package-item.remove-highlight td:last-of-type{
	border-right-width: 1px;
}

.Editor #data-package-table ul li a span {
    margin-left: .3em;
    margin-right: .3em;
    text-align: right;
}

.Editor #data-package-table ul li i {
    margin-left: .3em;
    margin-right: .3em;
}
/* ... */

